# gtkdatabox-git-pre-v1.0

./: .gitignore  AUTHORS  ChangeLog  Doxyfile  Makefile.am  NEWS  README  TODO  configure.ac  gtkdataboxvc++.rar
doc/: Makefile.am  gtkdatabox-docs.xml  gtkdatabox-sections.txt  gtkdatabox.types
examples/: Makefile.am  addremove.c  basics.c  basics2.c  basics_libglade.c  colors.c  enable_disable.c  full.c  grid.c  grid_array.c  keycontrol.c  lissajous.c  logarithmic.c  markers.c  rulers.c  signals.c
glade/: Makefile.am  gladeui-databox.c  gtkdatabox.xml  widget-gladedatabox-gtk_databox.fig  widget-gladedatabox-gtk_databox_ruler.fig
gtk/: Makefile.am  gtkdatabox.c  gtkdatabox.h  gtkdatabox_bars.c  gtkdatabox_bars.h  gtkdatabox_cross_simple.c  gtkdatabox_cross_simple.h  gtkdatabox_graph.c  gtkdatabox_graph.h  gtkdatabox_grid.c  gtkdatabox_grid.h  gtkdatabox_lines.c  gtkdatabox_lines.h  gtkdatabox_markers.c  gtkdatabox_markers.h  gtkdatabox_marshal.c  gtkdatabox_marshal.h  gtkdatabox_offset_bars.c  gtkdatabox_offset_bars.h  gtkdatabox_points.c  gtkdatabox_points.h  gtkdatabox_regions.c  gtkdatabox_regions.h  gtkdatabox_ruler.c  gtkdatabox_ruler.h  gtkdatabox_scale.c  gtkdatabox_scale.h  gtkdatabox_typedefs.h  gtkdatabox_xyc_graph.c  gtkdatabox_xyc_graph.h  gtkdatabox_xyyc_graph.c  gtkdatabox_xyyc_graph.h
gtkdataboxvc++/: ReadMe.txt  gtkdataboxvc++.sln  gtkdataboxvc++.vcxproj  gtkdataboxvc++.vcxproj.filters
scripts/: myAutoreconf.sh
